--- a/src/App.css
+++ b/src/App.css
@@ -3,31 +3,26 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 45px;
   pointer-events: none;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 40px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 35px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-logo-header {
+  margin-left: 15px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
