--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color:#292A2F;
   min-height: 40px;
   display: flex;
   flex-direction: row;
@@ -17,6 +17,16 @@
   font-size: 35px;
   color: white;
 }
+
+.App-header:after {
+  content: "";
+  position: absolute;
+  height: 1px;
+  top: 60px;
+  width: 90%;
+  border-bottom: 4px solid#37383E;
+}
+
 
 .App-logo-header {
   margin-left: 15px;
