--- a/src/App.css
+++ b/src/App.css
@@ -27,12 +27,39 @@
   border-bottom: 4px solid#37383E;
 }
 
-
 .App-logo-header {
   margin-left: 15px;
+  margin-right: 15px;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.info {
+  color: white;
+  /* font-size: 3vw; */
+  font-size: calc(1em + 2vw);
+  font-family: 'Roboto Slab', serif;
+  font-weight: bold;
+}
+
+.landingLogin {
+  font-size: calc(1em + 1.5vw);
+}
+
+.greenButton {
+  background-color: #2EB454;
+  display: inline-block;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+  font-size: 2vw;
+  padding: 16px 30px;
+  border-radius: 30px;
+}
+
+.greenButton:hover {
+  background-color: rgb(29, 121, 55);
 }
 
